MH-4386, MH-4395, MH-4064, MH-4383
git-svn-id: http://opencast.jira.com/svn/MH/trunk@7768 e6edf6fb-f266-4316-afb4-e53d95876a76

--- a/modules/matterhorn-engage-player/src/main/flex/Videodisplay/org/opencast/engage/videodisplay/view/CoverView.mxml
+++ b/modules/matterhorn-engage-player/src/main/flex/Videodisplay/org/opencast/engage/videodisplay/view/CoverView.mxml
@@ -26,7 +26,6 @@
     width="100%"
     height="100%"
     resize="{ onResize() }"
-    
     >
 
     <mx:Script>
@@ -46,40 +45,115 @@
             {
                 if( model.coverState == CoverState.ONECOVER )
                 {
-                    img_coverOne.x = ( ( Application.application.width - 10 ) / 2 ) - img_coverOne.contentWidth / 2;
+                    img_coverSingle.x = ( ( Application.application.width - 10 ) / 2 ) - img_coverSingle.contentWidth / 2;
                    
                 }
                 else
                 {
-                	img_coverOne.x = ( ( Application.application.width - 10 ) / 2 ) - ( ( img_coverOne.contentWidth + img_coverTwo.contentWidth )  / 2 );
-                	img_coverTwo.x = img_coverOne.x + img_coverOne.contentWidth +1;
+                	
+                	
+                	//img_coverOne.x = ( ( Application.application.width - 10 )  ) - ( ( img_coverOne.contentWidth + img_coverTwo.contentWidth )  / 2 );
+                //	img_coverTwo.x =  img_coverOne.contentWidth +1;
                 }
             }
         ]]>
     </mx:Script>
     
-    <mx:Image 
-    	id="img_coverOne"
-        width="100%"
-        height="100%"
-        autoLoad="true"
-    	source="{ model.coverURLOne }"
-    	scaleContent="true"
-    	updateComplete="{ onResize() }"
-    	visible="{ model.coverURLOne != '' ? true : false }"
-        includeInLayout="{ model.coverURLOne != '' ? true : false }"
-        />
+    <mx:states>
+
+        <mx:State 
+            name = "onecover"
+            >
+
+            <mx:SetProperty 
+                target = "{ bx_onecover }"
+                name = "visible"
+                value = "true"
+                />
+
+            <mx:SetProperty 
+                target = "{ bx_onecover }"
+                name = "includeInLayout"
+                value = "true"
+                />
+        </mx:State>
+
+        <mx:State 
+            name = "twocovers"
+            >
+
+            <mx:SetProperty 
+                target = "{ bx_twocovers }"
+                name = "visible"
+                value = "true"
+                />
+
+            <mx:SetProperty 
+                target = "{ bx_twocovers }"
+                name = "includeInLayout"
+                value = "true"
+                />
+        </mx:State>
         
-    <mx:Image 
-        id="img_coverTwo"
-        width="100%"
-        height="100%"
-        autoLoad="true"
-        source="{ model.coverURLTwo }"
-        scaleContent="true"
-        updateComplete="{ onResize() }"
-        visible="{ model.coverURLTwo != '' ? true : false }"
-        includeInLayout="{ model.coverURLTwo != '' ? true : false }"
-        />
+     </mx:states>
+    
+    <mx:Canvas 
+    	id="bx_onecover"
+    	width="100%"
+    	height="100%"
+    	visible = "false"
+        includeInLayout = "false"
+    	>
+    	
+    	 <mx:Image 
+            id="img_coverSingle"
+            width="100%"
+            height="100%"
+            autoLoad="true"
+            source="{ model.coverURLSingle }"
+            scaleContent="true"
+            updateComplete="{ onResize() }"
+            visible="{ model.coverURLSingle != '' ? true : false }"
+            includeInLayout="{ model.coverURLSingle != '' ? true : false }"
+            />
+    	
+    </mx:Canvas>
+    
+    <mx:HBox 
+    	id="bx_twocovers"
+    	width="100%"
+    	height="100%"
+    	verticalAlign="bottom"
+    	horizontalAlign="center"
+    	horizontalGap="1"
+    	 visible = "false"
+        includeInLayout = "false"
+    	>
+    	
+        <mx:Image 
+	    	id="img_coverOne"
+	        width="100%"
+	        height="100%"
+	        autoLoad="true"
+	    	source="{ model.coverURLOne }"
+	    	scaleContent="true"
+	    	updateComplete="{ onResize() }"
+	    	visible="{ model.coverURLOne != '' ? true : false }"
+	        includeInLayout="{ model.coverURLOne != '' ? true : false }"
+	        />
+	        
+	    <mx:Image 
+	        id="img_coverTwo"
+	        width="100%"
+	        height="100%"
+	        autoLoad="true"
+	        source="{ model.coverURLTwo }"
+	        scaleContent="true"
+	        updateComplete="{ onResize() }"
+	        visible="{ model.coverURLTwo != '' ? true : false }"
+	        includeInLayout="{ model.coverURLTwo != '' ? true : false }"
+	        />
+	        
+    </mx:HBox>
   
 </mx:Canvas>
