--- a/modules/matterhorn-engage-player/src/main/flex/Videodisplay/org/opencast/engage/videodisplay/view/MediaView.mxml
+++ b/modules/matterhorn-engage-player/src/main/flex/Videodisplay/org/opencast/engage/videodisplay/view/MediaView.mxml
@@ -116,6 +116,7 @@
     	id = "bx_cover"
         visible = "false"
         includeInLayout = "false"
+        currentState="{ model.coverState }"
         />	
 
 
