--- a/shared-resources/player/engage-hybrid-player/css/player-multi-hybrid.css
+++ b/shared-resources/player/engage-hybrid-player/css/player-multi-hybrid.css
@@ -18,6 +18,7 @@
 body
 {
   font-family:              Verdana;
+  padding-top:              5px;
 }   
 
 table
@@ -181,6 +182,28 @@ table
   text-align:               center;
 }
 
+
+#oc_volume-menue
+{
+    visibility:             hidden;
+}
+
+#oc_video-size-menue
+{
+    visibility:             hidden;
+    float:                  right;
+}
+
+
+#oc_player_video-dropdown
+{
+    position:               absolute; 
+    background-color:       black;
+    z-index:                10000;
+    visibility:             hidden;
+    padding-bottom:         5px;
+}
+
 #oc_volume-dropdown
 {
   margin:                   0;
@@ -188,7 +211,7 @@ table
   float:                    left;
   margin-right:             10px;
 }
-
+/*
 #oc_volume-dropdown li
 {   
   float:                    left;
@@ -209,7 +232,7 @@ table
   float:                    none;
   display:                  inline;
 }
-        
+        */
 #oc_volume-dropdown-div
 {   
   height:                   28px;
@@ -225,8 +248,6 @@ table
   width:                    8%;
   height:                   30px;
   float:                    left;
-  /*margin-right:             15px;
-  margin-left:              15px;*/
 }
 
 .oc_slider-volume-Rail 
@@ -439,7 +460,7 @@ option:hover
   float:                    right;
   margin-right:             10px;
 }
-
+/*
 #oc_video-size-dropdown li
 {   
   float:                    left;
@@ -470,6 +491,7 @@ option:hover
 {   
   background:               #000000; 
 }
+*/
 
 #oc_video-size-dropdown-div
 {   
