MH-2837: moved captions file upload to iframe; now userfriendly confirmation message
git-svn-id: http://opencast.jira.com/svn/MH/trunk@7828 e6edf6fb-f266-4316-afb4-e53d95876a76

--- a/modules/matterhorn-ingest-service-impl/src/main/resources/templates/uploadform.html
+++ b/modules/matterhorn-ingest-service-impl/src/main/resources/templates/uploadform.html
@@ -9,6 +9,7 @@
     <form id="uploadForm" name="uploadForm" method="POST" action="{uploadURL}" enctype="multipart/form-data">
       <input type="hidden" name="flavor" value="">
       <input type="hidden" name="mediaPackage" value="">
+      <input type="hidden" name="elementType" value="track">
       <input type="file" name="file" onchange="parent.UploadListener.fileSelectedAjax(this.value,'{jobId}');">
       <!-- <input type="submit" value="Submit"> -->
     </form>
