MH-4468 css fixes
git-svn-id: http://opencast.jira.com/svn/MH/trunk@7829 e6edf6fb-f266-4316-afb4-e53d95876a76

--- a/modules/matterhorn-engage-player/src/main/flex/Videodisplay/org/opencast/engage/videodisplay/view/CoverView.mxml
+++ b/modules/matterhorn-engage-player/src/main/flex/Videodisplay/org/opencast/engage/videodisplay/view/CoverView.mxml
@@ -123,14 +123,12 @@
     	id="bx_twocovers"
     	width="100%"
     	height="100%"
-    	verticalAlign="bottom"
-    	horizontalAlign="center"
-    	horizontalGap="1"
-    	 visible = "false"
+    	horizontalGap="0"
+    	visible = "false"
         includeInLayout = "false"
     	>
     	
-        <mx:Image 
+    	<mx:Image 
 	    	id="img_coverOne"
 	        width="100%"
 	        height="100%"
@@ -140,6 +138,7 @@
 	    	updateComplete="{ onResize() }"
 	    	visible="{ model.coverURLOne != '' ? true : false }"
 	        includeInLayout="{ model.coverURLOne != '' ? true : false }"
+	        horizontalAlign="right"
 	        />
 	        
 	    <mx:Image 
@@ -152,8 +151,10 @@
 	        updateComplete="{ onResize() }"
 	        visible="{ model.coverURLTwo != '' ? true : false }"
 	        includeInLayout="{ model.coverURLTwo != '' ? true : false }"
+	        horizontalAlign="left"
 	        />
-	        
+
+
     </mx:HBox>
   
 </mx:Canvas>
