--- a/modules/matterhorn-engage-player/src/main/html/html-release/engage-hybrid-player/css/embed-hybrid-player.css
+++ b/modules/matterhorn-engage-player/src/main/html/html-release/engage-hybrid-player/css/embed-hybrid-player.css
@@ -38,6 +38,12 @@
   margin-top:               2px;
 }
 
+#oc-link-advanced-player
+{
+  display:                  none;
+
+}
+
 body
 {
   font-family:              Verdana;
@@ -135,10 +141,30 @@ table
 
 #oc_sound
 {
+  margin-top:               5px;
   float:                    left;
   width:                    5%;
-  margin-top:               5px;
   text-align:               center;
+}
+
+#oc_volume-menue
+{
+  visibility:               hidden;
+}
+
+#oc_video-size-menue
+{
+    visibility:             hidden;
+    float:                  right;
+}
+
+#oc_player_video-dropdown
+{
+    position:               absolute; 
+    background-color:       black;
+    z-index:                10000;
+    visibility:             hidden;
+    padding-bottom:         5px;
 }
 
 #oc_volume-dropdown
@@ -149,7 +175,7 @@ table
   margin-right:             10px;
 }
 
-
+/*
 #oc_volume-dropdown li
 {   
   float:                    left;
@@ -170,7 +196,8 @@ table
   float:                    none;
   display:                  inline;
 }
-      
+*/
+
 #oc_volume-dropdown-div
 {   
   height:                   28px;
@@ -186,8 +213,6 @@ table
   width:                    8%;
   height:                   30px;
   float:                    left;
-  /*margin-right:             15px;
-  margin-left:              15px;*/
 }
 
 #divToolTip
@@ -222,7 +247,7 @@ table
   background-color:         #EEEEEE;
 }
 
-oc_slider-volume-Thumb
+.oc_slider-volume-Thumb
 {
   background:               transparent url("../img/oc_icons.png");
   background-position:      -30px -270px;
