--- a/modules/matterhorn-engage-player/src/main/html/html-release/engage-hybrid-player/css/embed-hybrid-player.css
+++ b/modules/matterhorn-engage-player/src/main/html/html-release/engage-hybrid-player/css/embed-hybrid-player.css
@@ -146,7 +146,7 @@ table
 {
   margin-top:               5px;
   float:                    left;
-  width:                    25%;
+  width:                    18%;
   text-align:               right;
 }
 
@@ -266,10 +266,10 @@ table
 
 #oc_video-cc
 {
-  margin-top:               5px;
+  margin-top:               7px;
   float:                    left;
-  width:                    5%;
-  text-align:               center;
+  width:                    7%;
+  text-align:               left;
   visibility:               hidden;
 }
 
@@ -277,7 +277,7 @@ table
 {
   margin-top:               5px;
   float:                    right;
-  width:                    5%;
+  width:                    10%;
 }
 
 #oc_video-size-dropdown
