--- a/modules/matterhorn-engage-player/src/main/html/html-release/engage-hybrid-player/css/player-multi-hybrid.css
+++ b/modules/matterhorn-engage-player/src/main/html/html-release/engage-hybrid-player/css/player-multi-hybrid.css
@@ -18,6 +18,7 @@
 body
 {
   font-family:              Verdana;
+  padding-top:              5px;
 }   
 
 table
@@ -106,29 +107,29 @@ table
 
 #oc_video-player-controls
 {
-  height:                   36px;
+  height:                   30px;
   width:                    100%;
-  background-image:         url("../img/icons.png");
+  background-image:         url("../img/oc_icons.png");
   background-position:      0 0px;
-  margin-top:               5px;
-  margin-bottom:            5px;
+  /*margin-top:               5px;
+  margin-bottom:            5px;*/
 }
 
 #oc_video-time
 {
+  margin-top:               5px;
   float:                    left;
   text-align:               left;
   font-size:                0.8em;
   color:                    #FFFFFF;
-  background-image:         url("../img/icons.png");
-  background-position:      0 0;
+  /*background-image:         url("../img/oc_icons.png"); 
+  background-position:      0 0; */
   width:                    30%;
-  height:                   36px;
+  height:                   30px;
 }
 
 #simpleEdit 
 {
-  margin-top:               12px;
   margin-left:              10px;
   font-size:                1.2em;
 }
@@ -167,6 +168,7 @@ table
 
 #oc_video-controls
 {
+  margin-top:               5px;
   float:                    left;
   width:                    40%;
   text-align:               right;
@@ -174,19 +176,42 @@ table
 
 #oc_sound
 {
+  margin-top:               5px;
   float:                    left;
   width:                    5%;
   text-align:               center;
+}
+
+
+#oc_volume-menue
+{
+    visibility:             hidden;
+}
+
+#oc_video-size-menue
+{
+    visibility:             hidden;
+    float:                  right;
+}
+
+
+#oc_player_video-dropdown
+{
+    position:               absolute; 
+    background-color:       black;
+    z-index:                10000;
+    visibility:             hidden;
+    padding-bottom:         5px;
 }
 
 #oc_volume-dropdown
 {
   margin:                   0;
   padding:                  0;
-  float:                    right;
+  float:                    left;
   margin-right:             10px;
 }
-
+/*
 #oc_volume-dropdown li
 {   
   float:                    left;
@@ -200,20 +225,20 @@ table
   position:                 absolute;
   visibility:               hidden;
   border-top:               1px solid white
-}   
-        
+}
+       
 #oc_volume-dropdown li ul li
 {   
   float:                    none;
   display:                  inline;
 }
-        
+        */
 #oc_volume-dropdown-div
 {   
   height:                   28px;
-  padding-top:              4px;
-  background-image:         url("../img/icons.png");
-  background-position:      0 -4px;
+  /*padding-top:              4px;
+  background-image:         url("../img/icons.png"); 
+  background-position:      0 -4px; */
   text-align:               center;
   margin-left:              -50px;
 }
@@ -221,10 +246,8 @@ table
 #oc_volume-slider
 {
   width:                    8%;
-  height:                   36px;
+  height:                   30px;
   float:                    left;
-  margin-right:             15px;
-  margin-left:              15px;
 }
 
 .oc_slider-volume-Rail 
@@ -234,7 +257,7 @@ table
   border:                   1px solid #999999;
   position:                 relative;
   background:               #fff;
-  margin-top:               12px;
+  margin-top:               8px;
 }
 
 .oc_slider-volume-Thumb:focus
@@ -245,12 +268,12 @@ table
 
 .oc_slider-volume-Thumb
 {
-  background:               transparent url("../img/icons.png");
-  background-position:      0 -396px;
+  background:               transparent url("../img/oc_icons.png");
+  background-position:      -30px -270px;
   margin:                   0px;
   padding:                  0px;
-  width:                    15px; 
-  height:                   9px;
+  width:                    10px; 
+  height:                   10px;
   position:                 absolute;
   margin-top:               -3px;
 }
@@ -273,18 +296,19 @@ table
 
 .oc-slider-volume-Thumb
 {
-  background:               transparent url("../img/icons.png");
-  background-position:      0 -396px;
+  background:               transparent url("../img/oc_icons.png");
+  background-position:      -30px -270px;
   margin:                   0px;
   padding:                  0px;
-  width:                    15px; 
-  height:                   9px;
+  width:                    10px; 
+  height:                   10px;
   position:                 absolute;
   margin-top:               -3px;
 }
 
 #oc_video-cc
 {
+  margin-top:               5px;
   float:                    left;
   width:                    5%;
   text-align:               center;
@@ -293,8 +317,9 @@ table
 
 #oc_video-size-controls
 {
+  margin-top:               5px;
   float:                    right;
-  width:                    12%;
+  width:                    5%;
 }
 
 .oc_tabs
@@ -377,7 +402,6 @@ table
   margin-left:              30px;
 }
 
-
 #oc_bookmarkSelect
 {
   width:                    100%;
@@ -385,7 +409,6 @@ table
   background-color:         transparent;
   margin-top:               5px;
 }
-
 
 option
 {
@@ -437,7 +460,7 @@ option:hover
   float:                    right;
   margin-right:             10px;
 }
-
+/*
 #oc_video-size-dropdown li
 {   
   float:                    left;
@@ -468,13 +491,14 @@ option:hover
 {   
   background:               #000000; 
 }
+*/
 
 #oc_video-size-dropdown-div
 {   
   height:                   28px;
-  padding-top:              4px;
+  /*padding-top:              4px;
   background-image:         url("../img/icons.png");
-  background-position:      0 -4px;
+  background-position:      0 -4px;*/
   text-align:               center;
 }
 
@@ -517,18 +541,7 @@ option:hover
   margin-bottom:            5px;
 }
 
-.oc_DisplayBlockTableLeft
-{
-  display:                  block;
-  text-align:               left;
-  padding:                  5px;
-  overflow:                 auto; 
-  border:                   1px solid #000000;
-  background-color:         #E3E3D7;
-  margin-right:             5px;
-}
-
-.oc_DisplayBlockTableRight
+.oc_DisplayBlock-textleft
 {
   display:                  block;
   text-align:               left;
@@ -543,6 +556,17 @@ option:hover
   width:                    95%;
   overflow:                 auto;
   margin-top:               5px;
+}
+
+.oc_slidetext-left
+{
+  float:                    left; 
+  width:                    75%;
+}
+
+.oc_slidetext-right
+{  
+  float:                    right
 }
 
 .oc_DisplayNone
@@ -608,30 +632,48 @@ option:hover
 
 .scrubber-button 
 {
-  background:               transparent url("../img/icons.png");
-  background-position:      0 -445px;
-  height:                   15px;
-  width:                    13px;
-  margin-top:               -4px;
-  margin-left:              -6px;
+  background:               transparent url("../img/oc_icons.png");
+  background-position:      -60px -360px;
+  height:                   19px;
+  width:                    9px;
+  /*margin-top:               -4px;
+  margin-left:              -6px;*/
   position:                 relative; 
   border:                   0px;
-  top:                      -11px; 
+  top:                      0px; 
   z-index:                  2;
+  margin-left:              -4px;
 }
 
 #draggable 
 { 
-  background:               transparent url("../img/icons.png");
-  background-position:      0 -445px;
-  height:                   15px;
-  width:                    13px;
-  margin-top:               -14px;
-  margin-left:              -6px;
+  background:               transparent url("../img/oc_icons.png");
+  background-position:      -60px -360px;
+  height:                   19px;
+  width:                    9px;
+  /*margin-top:               -4px;
+  margin-left:              -6px;*/
   position:                 relative; 
   border:                   0px;
-  top:                      -12px; 
+  top:                      -19px;
   z-index:                  3;
+  margin-left:              -4px;
+}
+
+#divToolTip
+{
+  position : absolute;
+  padding:                  2px;
+ text-align:               center;
+  -moz-border-radius :      5px 5px 5px 5px;
+  -webkit-border-radius :    5px 5px 5px 5px;
+  border :                  1px solid #f8bb22;
+  color :                   #000000;
+  background-color:         #fae6a0;
+  font-size :                   14;
+  left:                     120px;
+  top:                      380px;
+  cursor: default !important;
 }
 
 .play-segment 
@@ -687,15 +729,17 @@ option:hover
 
 .progress-list 
 {
-  background-image:url("../img/icons.png");
-  background-position: 0 -432px;
+  /*background-image:url("../img/icons.png");
+  background-position: 0 -432px;*/
+  background-color:                    #FFFFFF;
   height: 7px;
 }
 
 .load-progress 
 {
-  background-image:url("../img/icons.png");
-  background-position: 0 -419px;
+  /*background-image:url("../img/icons.png");
+  background-position: 0 -419px;*/
+  background-color:                    #E99A8F;
   height: 7px;
   display:block;
   margin-top:0;
@@ -705,8 +749,9 @@ option:hover
 
 .play-progress 
 {
-  background-image:url("../img/icons.png");
-  background-position: 0 -405px;
+  /*background-image:url("../img/icons.png");
+  background-position: 0 -405px;*/
+  background-color:                    #DE6555;
   display:block;
   height:7px;
   margin-top:-7px;
@@ -715,11 +760,12 @@ option:hover
 
 .scrubber-channel 
 {
-   display:block;
+  display:block;
   margin-top:0;
   padding-right:0px;
   position:relative;
-  top: -12px;
+  top: -7px;
+  height: 7px;
 }
 
 .progress-text 
