--- a/shared-resources/player/engage-hybrid-player/css/embed-hybrid-player.css
+++ b/shared-resources/player/engage-hybrid-player/css/embed-hybrid-player.css
@@ -38,6 +38,12 @@
   margin-top:               2px;
 }
 
+#oc-link-advanced-player
+{
+  display:                  none;
+
+}
+
 body
 {
   font-family:              Verdana;
@@ -135,10 +141,30 @@ table
 
 #oc_sound
 {
+  margin-top:               5px;
   float:                    left;
   width:                    5%;
-  margin-top:               5px;
   text-align:               center;
+}
+
+#oc_volume-menue
+{
+  visibility:               hidden;
+}
+
+#oc_video-size-menue
+{
+    visibility:             hidden;
+    float:                  right;
+}
+
+#oc_player_video-dropdown
+{
+    position:               absolute; 
+    background-color:       black;
+    z-index:                10000;
+    visibility:             hidden;
+    padding-bottom:         5px;
 }
 
 #oc_volume-dropdown
@@ -149,6 +175,7 @@ table
   margin-right:             10px;
 }
 
+/*
 #oc_volume-dropdown li
 {   
   float:                    left;
@@ -162,14 +189,15 @@ table
   position:                 absolute;
   visibility:               hidden;
   border-top:               1px solid white
-}
-       
+}   
+        
 #oc_volume-dropdown li ul li
 {   
   float:                    none;
   display:                  inline;
 }
-        
+*/
+
 #oc_volume-dropdown-div
 {   
   height:                   28px;
@@ -185,8 +213,6 @@ table
   width:                    8%;
   height:                   30px;
   float:                    left;
-  /*margin-right:             15px;
-  margin-left:              15px;*/
 }
 
 #divToolTip
@@ -261,7 +287,6 @@ table
   margin-top:               -3px;
 }
 
-
 #oc_video-cc
 {
   margin-top:               5px;
@@ -325,7 +350,6 @@ table
   background-position:      0 -4px;*/
   text-align:               center;
 }
-
 
 
 .oc_progress-bar
@@ -440,7 +464,6 @@ table
   top: -7px;
   height: 7px;
 }
-
 .progress-text 
 {
   display:block;
