MH-3927 added prefix icons for status-column of "recordings-all" in AdminUI
git-svn-id: http://opencast.jira.com/svn/MH/trunk@7861 e6edf6fb-f266-4316-afb4-e53d95876a76

--- a/modules/matterhorn-admin-ui/src/main/resources/ui/css/admin.css
+++ b/modules/matterhorn-admin-ui/src/main/resources/ui/css/admin.css
@@ -421,3 +421,27 @@ fieldset {
 }
 
 .color-red {color:red;}
+
+.recording-upcoming {
+    background-image: url(../shared_img/icons/clock.png);
+}
+
+.recording-capturing {
+    background-image: url(../shared_img/icons/webcam.png);
+}
+
+.recording-processing {
+    background-image: url(../shared_img/icons/server_compressed.png);
+}
+
+.recording-finished {
+    background-image: url(../shared_img/icons/television.png);
+}
+
+.recording-hold {
+    background-image: url(../shared_img/icons/server_hold.png);
+}
+
+.recording-failed {
+    background-image: url(../shared_img/icons/cross.png);
+}
