MH-3927: refine alignment for status column of "recordings-all" in AdminUI
git-svn-id: http://opencast.jira.com/svn/MH/trunk@7863 e6edf6fb-f266-4316-afb4-e53d95876a76

--- a/modules/matterhorn-admin-ui/src/main/resources/ui/css/admin.css
+++ b/modules/matterhorn-admin-ui/src/main/resources/ui/css/admin.css
@@ -439,9 +439,17 @@ fieldset {
 }
 
 .recording-hold {
-    background-image: url(../shared_img/icons/server_hold.png);
+    background-image: url(../shared_img/icons/server_edit.png);
 }
 
 .recording-failed {
     background-image: url(../shared_img/icons/cross.png);
+}
+.iconCell {
+    display: table-cell;
+    padding-right: 5px;
+}
+
+.statusCell {
+    display: table-cell;
 }
