--- a/modules/matterhorn-engage-ui/src/main/resources/ui/css/oc.pager.css
+++ b/modules/matterhorn-engage-ui/src/main/resources/ui/css/oc.pager.css
@@ -1,12 +1,19 @@
-  ul#navigation {
-    margin: 0; 
-    padding: 0.2em;
-    text-align: center;
-  }
-  
-  ul#navigation li {
-    list-style: none;
-    display: inline;
-    margin: 0.4em; 
-    padding: 0;
-  }
+ul.navigation {
+  margin: 0; 
+  padding: 0.2em;
+  text-align: center;
+}
+
+ul.navigation li {
+  list-style: none;
+  display: inline;
+  margin: 0.4em; 
+  padding: 0;
+}
+.navigation {
+ font-size: 14px;
+}
+#currentPage {
+  font-weight: bold;
+  color: #2D8F8B;
+}
