--- a/modules/matterhorn-engage-player/src/main/html/html-release/engage-hybrid-player/css/embed-hybrid-player.css
+++ b/modules/matterhorn-engage-player/src/main/html/html-release/engage-hybrid-player/css/embed-hybrid-player.css
@@ -21,6 +21,7 @@
   width:                    100%;
   background-image:         url("../img/icons.png");
   background-position:      0 -4px;
+  margin-bottom:            5px;
 } 
   
 #oc_embed-title
@@ -36,12 +37,6 @@
 {
   color:                    #FA6E23;
   margin-top:               2px;
-}
-
-#oc-link-advanced-player
-{
-  display:                  none;
-
 }
 
 body
@@ -78,6 +73,8 @@ table
   width:                    100%;
   background-image:         url("../img/oc_icons.png");
   background-position:      0 0px;
+  /*margin-top:               5px;
+  margin-bottom:            5px; */
 }
 
 #oc_video-time
@@ -141,30 +138,10 @@ table
 
 #oc_sound
 {
-  margin-top:               5px;
   float:                    left;
   width:                    5%;
+  margin-top:               5px;
   text-align:               center;
-}
-
-#oc_volume-menue
-{
-  visibility:               hidden;
-}
-
-#oc_video-size-menue
-{
-    visibility:             hidden;
-    float:                  right;
-}
-
-#oc_player_video-dropdown
-{
-    position:               absolute; 
-    background-color:       black;
-    z-index:                10000;
-    visibility:             hidden;
-    padding-bottom:         5px;
 }
 
 #oc_volume-dropdown
@@ -175,7 +152,7 @@ table
   margin-right:             10px;
 }
 
-/*
+
 #oc_volume-dropdown li
 {   
   float:                    left;
@@ -196,8 +173,7 @@ table
   float:                    none;
   display:                  inline;
 }
-*/
-
+      
 #oc_volume-dropdown-div
 {   
   height:                   28px;
@@ -213,22 +189,8 @@ table
   width:                    8%;
   height:                   30px;
   float:                    left;
-}
-
-#divToolTip
-{
-  position :                absolute;
-  padding:                  2px;
-  text-align:               center;
-  -moz-border-radius :      5px 5px 5px 5px;
-  -webkit-border-radius :    5px 5px 5px 5px;
-  border :                  1px solid #f8bb22;
-  color :                   #000000;
-  background-color:         #fae6a0;
-  font-size :                   14;
-  left:                     120px;
-  top:                      380px;
-  cursor:                   default !important;
+  /*margin-right:             15px;
+  margin-left:              15px;*/
 }
 
 .oc_slider-volume-Rail 
@@ -247,7 +209,7 @@ table
   background-color:         #EEEEEE;
 }
 
-.oc_slider-volume-Thumb
+oc_slider-volume-Thumb
 {
   background:               transparent url("../img/oc_icons.png");
   background-position:      -30px -270px;
@@ -369,6 +331,12 @@ table
    -webkit-border-radius:   0.2em;
     background-color:       #7B7EAE;
 }
+
+
+ 
+  
+
+ 
 
 .scrubber-button 
 {
