MH-4256 deliver missing pieces from shared resources
git-svn-id: http://opencast.jira.com/svn/MH/trunk@7879 e6edf6fb-f266-4316-afb4-e53d95876a76

--- a/shared-resources/shared_css/shared.css
+++ b/shared-resources/shared_css/shared.css
@@ -13,7 +13,7 @@ a {
 	line-height: 20px;
 	font-size: 0.8em;
 	color: #FFF;
-	background-color: #F6921E;
+	background-color: #A72123;
 	text-align:left;
 }
 
@@ -34,4 +34,29 @@ a {
 #skip a {
 	position: absolute;
 	top: 0;
+}
+
+.oc_headerRow {
+    margin-top: .5em;
+    padding:0 20px 5px 20px;
+}
+
+.oc_headerLink {
+    color:#F6921E;
+    text-decoration: none;
+}
+.mh-logo {
+    float:left;
+    display:table-cell;
+}
+
+.mh-heading {
+    display:table-cell;
+    float:left;
+    padding-left:25px;
+}
+
+.oc-logo {
+    float:right;
+    display:table-cell;
 }
