MH-4256: Implemented visual design fixes for the player
git-svn-id: http://opencast.jira.com/svn/MH/trunk@7890 e6edf6fb-f266-4316-afb4-e53d95876a76

--- a/shared-resources/player/engage-hybrid-player/css/player-multi-hybrid-icons.css
+++ b/shared-resources/player/engage-hybrid-player/css/player-multi-hybrid-icons.css
@@ -20,7 +20,7 @@ input
   border:                   0 none;
   onfocus:                  none;  
   overflow:                 hidden;
-  background:               #2B2B2B;
+  background:               #2D8F8B;
   color:                    #FFFFFF;
 }
 
