--- a/shared-resources/player/engage-hybrid-player/css/opencast-reset.css
+++ b/shared-resources/player/engage-hybrid-player/css/opencast-reset.css
@@ -41,6 +41,7 @@ h1 {
 h2 {
     /*16px via YUI Fonts CSS foundation*/
     font-size:123.1%; 
+    color: #2D8F8B;
 }
 h3 {
     /*14px via YUI Fonts CSS foundation*/
