--- a/shared-resources/player/engage-hybrid-player/css/player-multi-hybrid.css
+++ b/shared-resources/player/engage-hybrid-player/css/player-multi-hybrid.css
@@ -107,10 +107,10 @@ table
 
 #oc_video-player-controls
 {
-  height:                   30px;
   width:                    100%;
+  height:                   30px;
   background-image:         url("../img/oc_icons.png");
-  background-position:      0 0px;
+  background-position:      0px 0px;
 }
 
 #oc_video-time
